--- a/tokio-stream/Cargo.toml
+++ b/tokio-stream/Cargo.toml
@@ -12,6 +12,13 @@
 #    License for the specific language governing permissions and limitations
 #    under the License.
 
-[workspace]
+[package]
+name = "tokio-stream"
+version = "0.1.0"
+edition = "2021"
 
-members = [ "antlr-parser", "file-reader","pest-parser", "tokio-stream"]
+[dependencies]
+futures = "0.3.31"
+pin-project-lite = "0.2.15"
+tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
+tokio-stream = "0.1.16"
