--- a/tokio-stream/Cargo.toml
+++ b/tokio-stream/Cargo.toml
@@ -18,6 +18,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-stream = "0.3.6"
+futures = "0.3.31"
 pin-project-lite = "0.2.15"
 tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
 tokio-stream = "0.1.16"
