--- a/pest-parser/Cargo.toml
+++ b/pest-parser/Cargo.toml
@@ -22,3 +22,9 @@ lazy_static = "1.5.0"
 pest = "2.7.13"
 pest_derive = "2.7.13"
 serde_json = "1.0.140"
+tokio-stream = "0.1.16"
+async-stream = "0.3.6"
+futures = "0.3.31"
+pin-project-lite = "0.2.15"
+serde = { version = "1.0.219", features = ["derive"] }
+rstest = "0.25.0"
