--- a/pest-parser/Cargo.toml
+++ b/pest-parser/Cargo.toml
@@ -28,3 +28,5 @@ futures = "0.3.31"
 pin-project-lite = "0.2.15"
 serde = { version = "1.0.219", features = ["derive"] }
 rstest = "0.25.0"
+tokio = { version = "1", features = ["full", "test-util", "macros"] }
+chrono = "0.4.41"
