evaluate expr via val enum types

--- a/embedded-pdp/Cargo.toml
+++ b/embedded-pdp/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+futures = "0.3.31"
 notify = "8.0.0"
 pest-parser = { version = "0.1.0", path = "../pest-parser" }
 serde = { version = "1.0.197", features = ["derive"] }
