--- a/embedded-pdp/Cargo.toml
+++ b/embedded-pdp/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 futures = "0.3.31"
 notify = "8.0.0"
-pest-parser = { version = "0.1.0", path = "../pest-parser" }
+sapl-core = { version = "0.1.0", path = "../sapl-core" }
 pin-project-lite = "0.2.15"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
