--- a/pdp-server/Cargo.toml
+++ b/pdp-server/Cargo.toml
@@ -19,5 +19,5 @@ edition = "2024"
 
 [dependencies]
 embedded-pdp = { version = "0.1.0", path = "../embedded-pdp" }
-rocket = { version = "0.5.1", features = ["json"] }
+rocket = { version = "0.5.1", features = ["json", "tls"] }
 serde = "1.0.219"
