--- a/sapl-core/Cargo.toml
+++ b/sapl-core/Cargo.toml
@@ -31,7 +31,7 @@ rust-version = "1.88"
 lazy_static = "1.5.0"
 pest = "2.7.13"
 pest_derive = "2.7.13"
-serde_json = "1.0.140"
+serde_json = { version = "1.0.140", features = ["preserve_order"] }
 tokio-stream = "0.1.16"
 async-stream = "0.3.6"
 futures = "0.3.31"
