--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,5 +1,5 @@
 #
-#   Copyright 2024 Stefan Weng
+#   Copyright 2025 Stefan Weng
 #
 #   Licensed under the Apache License, Version 2.0 (the "License"); you may not
 #   use this file except in compliance with the License. You may obtain a copy
@@ -13,7 +13,7 @@
 #   License for the specific language governing permissions and limitations
 #   under the License.
 
-name: Rust
+name: ci-build
 
 on:
   push:
