add embedded pdp test demo in research section

--- a/research/embedded-pdp-demo/Cargo.toml
+++ b/research/embedded-pdp-demo/Cargo.toml
@@ -12,6 +12,16 @@
 #    License for the specific language governing permissions and limitations
 #    under the License.
 
-[workspace]
+[package]
+name = "embedded-pdp-demo"
+version = "0.1.0"
+edition = "2024"
 
-members = [ "research/antlr-parser", "embedded-pdp", "research/file-reader", "sapl-core", "sapl-server-rs", "research/tokio-stream-demo", "research/pest-parse-demo", "research/embedded-pdp-demo"]
+[dependencies]
+async-stream = "0.3.6"
+embedded-pdp = { version = "0.1.0", path = "../../embedded-pdp" }
+futures = "0.3.31"
+pin-project-lite = "0.2.15"
+sapl-core = { version = "0.1.0", path = "../../sapl-core" }
+tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
+tokio-stream = "0.1.16"
