--- a/sapl-core/Cargo.toml
+++ b/sapl-core/Cargo.toml
@@ -40,3 +40,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 rstest = "0.25.0"
 tokio = { version = "1", features = ["full", "test-util", "macros"] }
 chrono = "0.4.41"
+rust_decimal = { version = "1.37.2", features = ["macros"] }
