--- a/sapl-core/Cargo.toml
+++ b/sapl-core/Cargo.toml
@@ -37,7 +37,11 @@ async-stream = "0.3.6"
 futures = "0.3.31"
 pin-project-lite = "0.2.15"
 serde = { version = "1.0.219", features = ["derive"] }
-rstest = "0.25.0"
 tokio = { version = "1", features = ["full", "test-util", "macros"] }
 chrono = "0.4.41"
 rust_decimal = { version = "1.37.2", features = ["macros"] }
+
+# Dev dependencies are used exclusively when running tests
+# They do not get included in the final application binary!
+[dev-dependencies]
+rstest = "0.25.0"
