add log and env_logger as dependecies for better handling log output

--- a/embedded-pdp/Cargo.toml
+++ b/embedded-pdp/Cargo.toml
@@ -34,3 +34,4 @@ sapl-core = { version = "0.1.0", path = "../sapl-core" }
 pin-project-lite = "0.2.15"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+log = "0.4.27"
