--- a/sapl-core/Cargo.toml
+++ b/sapl-core/Cargo.toml
@@ -40,6 +40,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1", features = ["full", "test-util", "macros"] }
 chrono = "0.4.41"
 rust_decimal = { version = "1.37.2", features = ["macros"] }
+log = "0.4.27"
 
 # Dev dependencies are used exclusively when running tests
 # They do not get included in the final application binary!
