--- a/embedded-pdp/Cargo.toml
+++ b/embedded-pdp/Cargo.toml
@@ -35,3 +35,10 @@ pin-project-lite = "0.2.15"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 log = "0.4.27"
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "decide_once_benchmark"
+harness = false
