--- a/research/embedded-pdp-demo/Cargo.toml
+++ b/research/embedded-pdp-demo/Cargo.toml
@@ -22,3 +22,4 @@ embedded-pdp = { version = "0.1.0", path = "../../embedded-pdp" }
 futures = "0.3.31"
 sapl-core = { version = "0.1.0", path = "../../sapl-core" }
 tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
+serde_json = "1.0.115"
