add ci step checking for unused dependecies

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -92,3 +92,15 @@ jobs:
 
       - name: Linting
         run: cargo clippy -- -D warnings
+
+  machete:
+    name: Machete
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Machete - detect unused dependencies
+        uses: bnjbvr/cargo-machete@main
