--- a/research/embedded-pdp-demo/Cargo.toml
+++ b/research/embedded-pdp-demo/Cargo.toml
@@ -20,6 +20,6 @@ edition = "2024"
 [dependencies]
 embedded-pdp = { version = "0.1.0", path = "../../embedded-pdp" }
 futures = "0.3.31"
-sapl-core = { version = "0.1.0", path = "../../sapl-core" }
+#sapl-core = { version = "0.1.0", path = "../../sapl-core" }
 tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
 serde_json = "1.0.115"
