--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,22 @@
 members = [ "embedded-pdp", "research/file-reader", "sapl-core", "sapl-server-rs", "research/tokio-stream-demo", "research/pest-parse-demo", "research/embedded-pdp-demo"]
 
 resolver = "3"
+
+[workspace.dependencies]
+env_logger = "0.11.8"
+rocket = { version = "0.5.1", features = ["json", "tls"] }
+serde = "1.0.219"
+criterion = { version = "0.5", features = ["html_reports"] }
+futures = "0.3.31"
+notify = "8.0.0"
+serde_json = "1.0.115"
+log = "0.4.27"
+rstest = "0.25.0"
+pin-project-lite = "0.2.15"
+lazy_static = "1.5.0"
+pest = "2.7.13"
+pest_derive = "2.7.13"
+tokio-stream = "0.1.16"
+tokio = { version = "1", features = ["full", "test-util", "macros"] }
+chrono = "0.4.41"
+rust_decimal = { version = "1.37.2", features = ["macros"] }
