--- a/sapl-server-rs/Cargo.toml
+++ b/sapl-server-rs/Cargo.toml
@@ -29,6 +29,6 @@ rust-version = "1.88"
 
 [dependencies]
 embedded-pdp = { version = "0.1.0", path = "../embedded-pdp" }
-env_logger = "0.11.8"
-rocket = { version = "0.5.1", features = ["json", "tls"] }
-serde = "1.0.219"
+env_logger.workspace = true
+rocket = { workspace = true, features = ["json", "tls"] }
+serde.workspace = true
