--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,8 @@ log = "0.4.27"
 rstest = "0.25.0"
 pin-project-lite = "0.2.15"
 lazy_static = "1.5.0"
-pest = "2.7.13"
-pest_derive = "2.7.13"
+pest = "=2.8.5"
+pest_derive = "=2.8.5"
 tokio-stream = "0.1.16"
 tokio = { version = "1", features = ["full", "test-util", "macros"] }
 chrono = "0.4.41"
